<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/Register_restaurant_Spinner_Categories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension45"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:background="@drawable/rounded_corner_white"
        android:singleLine="true"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Register_restaurant_MinimumOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimension8"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/MinimumOrder"
        android:layoutDirection="rtl"
        android:padding="@dimen/dimension14"
        android:textSize="@dimen/text14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_restaurant_Spinner_Categories" />

    <EditText
        android:id="@+id/Register_restaurant_DeliveryCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/DeliveryCost"
        android:layoutDirection="rtl"
        android:padding="@dimen/dimension14"
        android:textSize="@dimen/text14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_restaurant_MinimumOrder" />


    <CheckBox
        android:id="@+id/Register_restaurant_CheckBox_DeliveryData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/dimension8"
        android:layout_marginEnd="@dimen/dimension8"
        android:text="@string/DeliveryData"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_restaurant_DeliveryCost" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimension3"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_restaurant_CheckBox_DeliveryData">

        <EditText
            android:id="@+id/Register_restaurant_Phone"
            android:layout_width="@dimen/dimension0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimension14"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_white"
            android:hint="@string/hint_phone"
            android:layoutDirection="rtl"
            android:padding="@dimen/dimension14"
            android:textSize="@dimen/text14" />

        <EditText
            android:id="@+id/Register_restaurant_WatsApp"
            android:layout_width="@dimen/dimension0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimension14"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_white"
            android:hint="@string/WatsApp"
            android:layoutDirection="rtl"
            android:padding="@dimen/dimension14"
            android:textSize="@dimen/text14" />

    </LinearLayout>

    <com.example.mm.sofraappmaster.ui.custom.custom_fonts.CairoRegularText
        android:id="@+id/cairoRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimension8"
        android:layout_marginEnd="@dimen/dimension8"
        android:text="@string/restaurant_photo"
        android:textColor="@color/colorGreyDark"
        android:textSize="@dimen/text16"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_Register" />

    <ImageView
        android:id="@+id/imageView_Register"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="@dimen/dimension8"
        android:layout_marginStart="@dimen/dimension8"
        android:layout_marginTop="@dimen/dimension8"
        app:layout_constraintEnd_toStartOf="@+id/cairoRegularText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/image_loader" />

    <com.example.mm.sofraappmaster.ui.custom.custom_fonts.CairoRegularText
        android:id="@+id/Register_restaurant_SignUp_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:layout_marginTop="@dimen/dimension45"
        android:text="@string/sign_up_text"
        android:gravity="center"
        android:textSize="@dimen/text16"
        android:padding="@dimen/dimension12"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Register"/>
</android.support.constraint.ConstraintLayout>